Commit my changes

--- a/app/04_directive/index.html
+++ b/app/04_directive/index.html
@@ -2,6 +2,20 @@
 <html lang="en" ng-app="myApp">
 	<head>
 		<title>My First Angular directive</title>
+		<style>
+			.ng-scope {
+				border: 1px solid red;
+				padding: 5px
+			}
+			.ng-binding {
+				border: 1px solid blue;
+				padding: 5px
+			}
+			.ng-isolate-scope {
+				border: 1px solid green;
+				padding: 5px
+			}
+		</style>
 	</head>
 	<body>
 		<p>Note: c'est bien d'utiliser --allow-file-access-from-files</p>
