--- a/app/07_scope/index.html
+++ b/app/07_scope/index.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<title>My First Controller</title>
+		<style>
+			.ng-scope {
+				border: 1px solid red;
+				padding: 5px
+			}
+		</style>
 	</head>
 
 	<body ng-app="myApp" ng-init="count = { value: 3 }">
@@ -21,7 +27,7 @@
 			</div>
 		</div>
 
-		<script src="../../node_modules/angular/angular.min.js"></script>
+		<script src="../../node_modules/angular/angular.js"></script>
 		<script type="text/javascript" src="app.js"></script>
 	</body>
 </html>
