--- a/app/08_watch/index.html
+++ b/app/08_watch/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body ng-controller="MyController as ctrl">
 		Name: <input ng-model="name" />
-		<p>Name: {{ name }}</p>
+		<p>Name: {{ ::name }}</p>
 		<p>Last update of name: {{lastUpdate | date:'medium'}}</p>
 		<script src="../../node_modules/angular/angular.min.js"></script>
 		<script type="text/javascript" src="app.js"></script>
